2017-02-13 Werner S Freund
	* Added support to AnalysisBase integration
	* Added firstItemDepth to LoopingBounds module
	* Log messages now show Cxx. prefix when logging from that side.
	* Fix in GitConfiguration
	* Added firstItemDepth to LoopingBounds;
	* Tagging RingerCore-01-01-00a

2017-01-04 Werner S Freund
	* Protect expandFolders from keeping folders in the returned list
	* Tagging RingerCore-01-00-24

2017-01-04 Werner S Freund
	* Added method to check whether item is in LoopingBounds
	* Tagging RingerCore-01-00-23

2017-12-21 Werner S Freund
	* Fix for the git tag also accept commits in the git describe str
	* Set development to be auto configured only when first requested
	allowing user to manual set it before if needed.
	* development is now a Configure instance instead of the resulting int
	* Tagging RingerCore-01-00-22

2017-12-20 Werner S Freund
	* Fix on traverse with max_depth_level.
	* Improve rawDict speed by loading keys when they are not in
	ignore list
	* Tagging RingerCore-01-00-21.

2017-12-18 Werner S Freund
	* Improved git version retrieval when .git file is a folder instead of a
	pointer to the submodule path.
	* Tagging RingerCore-01-00-20.

2017-12-18 Werner S Freund
	* Temporarily added excluded sites flag.
	* Argparser now prints help using logger instance.
	* Tagging RingerCore-01-00-19.

2017-12-18 Werner S Freund
	* Added development flag.
  * Tagging RingerCore-01-00-18.

2017-12-17 Werner S Freund
	* Added specific configuration classes that allow setting 
	limited or cast to type configuration instances.
	* Bug fix in Logger module that would display non-breaking lines
	messages when inside of unicode stream environment.
	* Added rucio extract_scope method
	* Added MultiThread automatic retrieval instance
	* Improved Argparser help parsing and added default values.
  * Tagging RingerCore-01-00-17

2017-12-15 Werner S Freund
	* Added option to inspect_list_attrs to not complain if input dimension it