@@ -4,6 +4,7 @@
 	* Log messages now show Cxx. prefix when logging from that side.
 	* Fix in GitConfiguration
 	* Added firstItemDepth to LoopingBounds;
+	* Added method reducePowerOf10Str
 	* Tagging RingerCore-01-01-00a
 
 2017-01-04 Werner S Freund
